--- a/pom.xml
+++ b/pom.xml
@@ -1,16 +1,19 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>org.norsys.pamela</groupId>
-  <artifactId>les-evenements</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  
-  <!-- =============================================================== -->
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>org.norsys.pamela</groupId>
+	<artifactId>les-evenements</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+
+	<!-- =============================================================== -->
 	<!-- Propriétés -->
 	<!-- =============================================================== -->
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
+		<slf4jVersion>1.6.1</slf4jVersion>
 	</properties>
 
 	<parent>
@@ -18,7 +21,7 @@
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.0.1.RELEASE</version>
 	</parent>
-	
+
 	<!-- les dependances -->
 	<dependencies>
 		<!-- Junit : pour tests unitaires -->
@@ -46,6 +49,11 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-	
+		<!-- <dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>${slf4jVersion}</version>
+		</dependency> -->
+
 	</dependencies>
 </project>
